# micro-videos-app

./: Dockerfile  README.md  Rascunhos  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_repository.py  test_unit_validators.py  test_unit_value_objects.py
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/integration/domain/: test_integration_entities.py
src/category/tests/unit/application/: test_unit_use_cases.py
src/category/tests/unit/domain/: test_unit_entities.py
