[project]
name = "micro-videos-app"
version = "0.1.0"
description = ""
authors = [
    {name = "José Silva", email = "jose.silva@gmail.com"},
]
dependencies = [
    "autopep8>=2.0.4",
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
